--- a/packages/rrweb-snapshot/package.json
+++ b/packages/rrweb-snapshot/package.json
@@ -10,8 +10,8 @@
     "test:update": "jest --updateSnapshot",
     "bundle": "rollup --config",
     "bundle:es-only": "cross-env ES_ONLY=true rollup --config",
-    "dev": "yarn bundle:es-only --watch",
-    "typings": "tsc -d --declarationDir typings",
+    "dev": "yarn bundle:es-only --watch & yarn typings -w",
+    "typings": "tsc -d --declarationDir typings --emitDeclarationOnly",
     "prepublish": "yarn typings && yarn bundle",
     "lint": "yarn eslint src"
   },
