--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -9,9 +9,10 @@
     "@rrweb/types"
   ],
   "scripts": {
-    "dev": "vite build -w",
-    "build": "tsc -noEmit && vite build",
+    "dev": "vite build -w & yarn typings -w",
+    "build": "yarn typings && vite build",
     "check-types": "tsc -noEmit",
+    "typings": "tsc -d --declarationDir typings --emitDeclarationOnly",
     "prepublish": "npm run build",
     "lint": "yarn eslint src/**/*.ts"
   },
@@ -27,7 +28,7 @@
   "type": "module",
   "main": "./dist/types.umd.cjs",
   "module": "./dist/types.js",
-  "typings": "dist/index.d.ts",
+  "typings": "typings/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/types.js",
@@ -35,7 +36,7 @@
     }
   },
   "files": [
-    "build",
+    "typings",
     "dist"
   ],
   "devDependencies": {
