Move types from rrweb-snapshot to @rrweb/types

--- a/packages/rrweb-snapshot/tsconfig.json
+++ b/packages/rrweb-snapshot/tsconfig.json
@@ -13,5 +13,9 @@
   },
   "exclude": ["test"],
   "include": ["src"],
-  "references": []
+  "references": [
+    {
+      "path": "../types"
+    }
+  ]
 }
