--- a/packages/rrdom-nodejs/package.json
+++ b/packages/rrdom-nodejs/package.json
@@ -49,7 +49,7 @@
     "cssstyle": "^2.3.0",
     "nwsapi": "^2.2.0",
     "rrdom": "^2.0.0-alpha.8",
-    "rrweb-snapshot": "^2.0.0-alpha.8"
+    "@rrweb/types": "^2.0.0-alpha.8"
   },
   "browserslist": [
     "supports es6-class"
