--- a/packages/rrweb-snapshot/package.json
+++ b/packages/rrweb-snapshot/package.json
@@ -41,6 +41,9 @@
     "url": "https://github.com/rrweb-io/rrweb/issues"
   },
   "homepage": "https://github.com/rrweb-io/rrweb/tree/master/packages/rrweb-snapshot#readme",
+  "dependencies": {
+    "@rrweb/types": "^2.0.0-alpha.8"
+  },
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/jest": "^27.0.2",
@@ -52,11 +55,12 @@
     "jest-snapshot": "^23.6.0",
     "jsdom": "^16.4.0",
     "puppeteer": "^17.1.3",
-    "rollup": "^2.45.2",
+    "rollup": "^2.46.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^7.0.1",
-    "tslib": "^2.5.3"
+    "tslib": "^2.5.3",
+    "typescript": "^4.7.3"
   }
 }
